Fix some small positioning/overflow things
* Echo icon positioning fix in rtl languages (thanks to RoanKattouw)
* Fix for header lines overlapping with floats (thanks to someone who...
  I don't actually remember, but they're absolutely lovely too)

--- a/resources/extensions/Echo.less
+++ b/resources/extensions/Echo.less
@@ -13,6 +13,7 @@
 	#personal-extra {
 		// Position and keep it from randomly overflowing massively for no apparent reason
 		margin: 0.7em 0 -2em 0;
+		white-space: nowrap;
 
 		ul {
 			list-style: none;
