--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -23,7 +23,6 @@ div {
 	.box;
 	background: @background;
 	padding: 1em @content-padding 3em;
-	overflow: auto;
 	position: relative;
 }
 #mw-content-container {
@@ -309,7 +308,7 @@ a.new,
 	h1,
 	h2 {
 		border-bottom: solid 2px @blue;
-
+		overflow: hidden;
 	}
 
 	h1.firstHeading {
